# mechanical

./: .gitignore  .style.yapf  README.md  README_projects.md  geometrics  help.txt  pyproject.toml  tray_cnc.std
badger/: 2d.dxf  build.py  chamber_integration_notes.txt
badger/components/: vent_screw.step
badger/drawings/: .gitignore  2d.dxf  engineering_sketch.dxf
badger/output/: .gitignore  dowels.brep  glass.brep  heater.brep  pusher.brep  sample_slots.brep  silicone.brep  spacer.brep  towers.brep
ccbox/: build.py
ccbox/components/: 1455NHD1601.stp  1455NHD1601_plates_removed.stp
chamber_ng/: adapter_spacer.brep  adapters.brep  build.py  chamber_ng.std  geometrics  middle.brep  pusher_downers.brep  spring_pin_spacer.brep  top_mid.brep  top_pcbs.brep
chamber_ng/drawings/: chamber_plan.dxf  ray_tracing.dxf
component_library/: .gitignore  877581017+511101060.stp  AKH04B-M5.STEP  Download_STEP_970150611 (rev1).stp  HIF3FC-16PA-2.54DSA.stp  SM05F1-Step.step  SM05SMA-Step.step  pusherwin_print.step
endblock/: build.py
geometrics/: README.md  setup.cfg
groovy/: build.py
help/: geometrics-3.dev285+g0dd1839.d20250516-py3-none-any.whl
hoye/: build.py
hoye/drawings/: 2d.dxf  (+1 more)
laser_label_holder/: build.py  tray_cnc.std
lightsource/: #led_pcb_layout_plan.dxf  led_pcb_layout_plan.dxf
lim_chamber/: 20190820_boxChamber_jong_rev1.stp  20190820_breadboardInset_1.stp  20190820_jongchulVacuumChamber_rev_1_assembly.stp  assemble_system.py  base.step  block.step  blockm.step  chamber.stp  lid.step  pcb_passthroughs.csg  pcb_passthroughs.scad  pcb_passthroughs.step  pcb_passthroughs.stl  pcb_support_base.scad  ray_tracing.dxf  sandwich.py  ws.step
otter/: assemble_system.py
otter_chamber/: L.step  T.step  adapterA.step  adapters.step  aligner.py  assemble_system.py  base.step  blocks.step  lid.step  mux_box.py  my_lid.step  ws.step
python/: setup.cfg
python/src/geometrics/: sandwich.py
python/src/geometrics/toolbox/: __init__.py  endblock.py  oring_groove.py  passthrough.py  utilities.py
rabbit/: build.py  lid.py
rabbit_mockup/: build.py  lid.py
sandwich/: build.py  geometrics
scratch_tool/: build.py  newbuild.py  scratch-tool.py  scratcher_cnc.std
squirrel/: build.py  lid.py  notes.txt
testing_chamber/: build.py
tests/: test_groovy.py  test_parallel.py  test_passthrough.py
toolbox/: __init__.py  c.py  constants.py  endblock.py  passthrough.py  pcb_passthrough.scad  pcb_passthrough_20.csg  pcb_passthrough_20.step  pcb_passthrough_8.csg  pcb_passthrough_8.step  pcb_passthroughs.scad  utilities.py
tools/: venv_dev_install.py
(+67 files in other folders)
