[build-system]
requires = [
  "hatchling >=1.11.0,<2",
  "hatch-vcs >=0.3.0",
]
build-backend = "hatchling.build"

[project]
name = "geometrics"
description = "some 3d stuff"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
keywords = [
  "cad",
  "3d",
  "science",
]
authors = [
  { name="Greyson Christoforo", email="grey@christoforo.net" },
]

classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
]
dependencies = [
  "cadquery",
  "cq_warehouse",
]
dynamic = [
  "version",
]

[project.urls]
Source = "https://github.com/greyltc/mechanical.git"

[tool.hatch.version]
source = "vcs"

#[tool.hatch.build]
#ignore-vcs = true
#include = [
#  "src/geometrics/*.py",
#]

[tool.hatch.build.hooks.vcs]
version-file = "src/geometrics/__about__.py"

#[tool.hatch.build.targets.wheel]
#only-include = ["src"]
#sources = ["src"]

[tool.black]
line-length = 999999
