[metadata]
name = geometrics
version = 0.0.1

[options]
packages = find:
include_package_data = False
install_requires =
    cadquery
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lim-chamber = geometrics.lim_chamber:build
    otter-chamber = geometrics.otter_chamber:build
    testing-chamber = geometrics.testing_chamber:build
    make-samich = geometrics.toolbox.sandwich:build

